add selenoid